zotprime-k8s/yamls/zotprime-elasticsearch-statefulset.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zotprime-elasticsearch
  namespace: zotprime
  labels:
#    component: elasticsearch
    apps: zotprime-elasticsearch
spec:
  selector:
    matchLabels:
      apps: zotprime-elasticsearch
  serviceName: "elasticsearch-masterservice"
  replicas: 1
  template:
    metadata:
      labels:
#        component: elasticsearch
        apps: zotprime-elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: "localhost:32000/elasticsearch:8.7.0"
        resources:
          limits:
            cpu: "0.5"
#            cpu: "1"
#            memory: 2Gi
            memory: 1Gi
          requests:
            cpu: 100m
#            cpu: "0.25"
#            memory: 1500Mi
            memory: 512M
        ports:
        - containerPort: 9300
          name: transport
#        livenessProbe:
#          tcpSocket:
#            port: transport
#          initialDelaySeconds: 120
#          periodSeconds: 10
        volumeMounts:
        - name: storage
          mountPath: /data
      priorityClassName: high-priority
  volumeClaimTemplates:
  - metadata:
      name: storage
    spec:
#      storageClassName: standard
      accessModes: [ ReadWriteOnce ]
      resources:
        requests:
          storage: 2Gi
