zotprime-k8s/yamls/zotprime-streamserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    apps: streamserver
  name: streamserver
  namespace: zotprime
spec:
  ports:
    - name: streamserver
      port: 8081
      targetPort: 81
  selector:
    apps: zotprime-streamserver
  type: ClusterIP
#status:
#  loadBalancer: {}
